# pqn-stack

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: code-quality.yml  python-app.yml
configs/: config_app_example.toml  config_messaging_example.toml  pqn-node.json
doc/: packet.md  project-goals.md
docs/: project-goals.md  routing.md
docs/images/: build_your_own_pqn.md
pqnstack/base/: driver.py  errors.py  network.py
pqnstack/network/: node.py  packet.py  router.py
pqnstack/pqn/: drivers.py  nodes.py
pqnstack/pqn/drivers/: optics.py  time.py
scripts/: chsh_daily_report.py  coincidence_gui  http_server  lint  manual_polserver  polserver
src/pqnstack/: cli.py  constants.py
src/pqnstack/app/: cron_manager.py  daily_report.py  main.py
src/pqnstack/app/api/: deps.py  main.py
src/pqnstack/app/api/routes/: chsh.py  coordination.py  debug.py  games.py  handshake.py  health.py  qkd.py  rng.py  serial.py  timetagger.py  websocket.py
src/pqnstack/app/core/: config.py  models.py
src/pqnstack/base/: driver.py  errors.py  instrument.py  network.py
src/pqnstack/network/: client.py  instrument_provider.py  node.py  packet.py  router.py
src/pqnstack/pqn/: nodes.py
src/pqnstack/pqn/drivers/: chsh_driver.py  dummies.py  optics.py  polarimeter.py  qkd_driver.py  rotaryencoder.py  rotator.py  time.py  timetagger.py
src/pqnstack/pqn/protocols/: chsh.py  measurement.py  qkd.py  qrng.py  tomography.py  visibility.py
test/playground/messaging/: client.py  node.py  router.py
test/pytest/: test_placeholder.py
tests/messaging/: blocking_client.py  client.py  config_example.toml  node.py  provider.py  router.py
tests/pytest/: test_internal_network.py  test_network_config.toml  test_placeholder.py
